--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -8,7 +8,8 @@
     display: flex;
     flex-flow: row wrap;
     padding: 20px;
-    justify-content: space-around;
+    justify-content: flex-start;
+    
 }
 
 .filter-inputs {
