--- a/src/components/FilterInputs/styles.css
+++ b/src/components/FilterInputs/styles.css
@@ -1,23 +1,11 @@
-.product-price {
-    color: #fb3f4c;
-    font-size: 1.3em;
-    padding: 5px;
-}
-
-.products-grid {
-    display: flex;
-    flex-flow: row wrap;
-    padding: 20px;
-    justify-content: flex-start;
-    
-}
-
 .filter-inputs {
     padding: 20px;
 }
 
 .action-inputs {
     margin-left: 20px;
+    display: flex;
+    flex-flow: row nowrap;
 }
 
 .action-inputs input {
