--- a/src/components/FilterInputs/styles.css
+++ b/src/components/FilterInputs/styles.css
@@ -1,10 +1,10 @@
 .filter-inputs {
-    padding: 20px;
+    padding: 1px;
 }
 
 .action-inputs {
-    margin-left: 20px;
     display: flex;
+    justify-content: flex-start;
     flex-flow: row nowrap;
 }
 
