--- a/src/components/ProductCard/styles.css
+++ b/src/components/ProductCard/styles.css
@@ -8,6 +8,6 @@
     display: flex;
     flex-flow: row wrap;
     padding: 20px;
-    justify-content: flex-start;
+    justify-content: center;
     
 }
