--- a/src/components/ProductCard/styles.css
+++ b/src/components/ProductCard/styles.css
@@ -2,7 +2,17 @@
     color: #fb3f4c;
     font-size: 1.3em;
     padding: 5px;
+    flex-grow: .9;
 }
+
+.product-info {
+    display: flex;
+    flex-flow: row nowrap;
+    height: 100px;
+    min-height: 10%;
+    width: 100%;
+}
+
 
 .products-grid {
     display: flex;
